--- a/style.css
+++ b/style.css
@@ -21,3 +21,99 @@
     /* Box  Shadow */
     --box-shadow: 0 0 16px 1px rgb(14 52 54 / 15%);
 }
+
+body {
+    color: var(--text-color);
+}
+
+header {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    right: 0;
+    background: var(--bg-color);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    z-index: 1000;
+    padding: 18px 100px;
+}
+
+.logo {
+    display: flex;
+    align-items: center;
+    column-gap: 0.5rem;
+    font-size: 1rem;
+    font-weight: 600;
+    color: var(--text-color);
+    text-transform: uppercase;
+}
+
+.logo .bx {
+    color: var(--main-color);
+}
+
+
+.navbar {
+    display: flex;
+}
+
+.navbar a {
+    padding: 8px 17px;
+    color: var(--text-color);
+    font-size: 1rem;
+    text-transform: uppercase;
+    font-weight: 500;
+}
+
+.navbar a:hover {
+    color: var(--main-color);
+}
+
+#menu-icon {
+    font-size: 24px;
+    color: var(--text-color);
+    z-index: 10001;
+    cursor: pointer;
+    display: none;
+}
+
+.header-icon {
+    font-size: 20px;
+    cursor: pointer;
+    z-index: 1000;
+    display: flex;
+    column-gap: 0.8rem;
+    align-items: center;
+}
+
+.header-icon .bx {
+    color: var(--bg-color);
+    padding: 7px;
+    background: var(--main-color);
+    border-radius: 0.4rem;
+}
+
+.header-icon .bx:hover {
+background: #ff8664;
+}
+
+.header-icon i {
+    position: relative;
+}
+
+.header-icon span {
+    position: absolute;
+    top: -7px;
+    right: -7px;
+    width: 18px;
+    height: 18px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    background: var(--text-color);
+    color: var(--bg-color);
+    font-size: 0.6rem;
+    font-weight: 500;
+}
