--- a/style.css
+++ b/style.css
@@ -22,10 +22,22 @@
     --box-shadow: 0 0 16px 1px rgb(14 52 54 / 15%);
 }
 
+/* images */
+img {
+    width: 100%;
+}
+
+/* section */
+section {
+    padding: 50px 100px;
+}
+
 body {
     color: var(--text-color);
 }
 
+/* ================== */
+/* HEADER SECTION */
 header {
     position: fixed;
     top: 0;
@@ -145,4 +157,67 @@ background: #ff8664;
 .search-box.active {
    right: 1rem;
    transition: 0.2s all linear;
+}
+
+/* HOME SECTION */
+
+.home {
+    width: 100%;
+    min-height: 740px;
+    display: grid;
+    align-items: center;
+    grid-template-columns: repeat(auto-fit,minmax(17rem, auto));
+    gap: 1.5rem;
+    background: var(--second-color);
+}
+
+.home-text h3 {
+    font-size: 1rem;
+    font-weight: 500;
+    text-transform: uppercase;
+    color: var(--main-color);
+}
+
+.home-text h1 {
+    font-size: 3.4rem;
+    letter-spacing: 1px;
+}
+
+.home-text span {
+    color: var(--main-color);
+}
+
+.home-text p {
+    font-size: 0.938rem;
+    max-width: 80%;
+    margin: 0.5rem 0 1.5rem;
+}
+
+.btn {
+    padding: 10px 30px;
+    border-radius: 0.3rem;
+    background: var(--main-color);
+    color: var(--bg-color);
+    font-weight: 500;
+}
+
+.btn:hover {
+    background: #ff8664;
+}
+
+/* Home img animation*/
+
+.home-img {
+    animation: float 3s linear infinite;
+}
+
+@keyframes float {
+    0%,100% {
+        transform: translateY(3.5rem);
+    }
+
+   50% {
+        transform: translateY(1rem);
+    }
+}
 }
