--- a/style.css
+++ b/style.css
@@ -220,4 +220,23 @@ background: #ff8664;
         transform: translateY(1rem);
     }
 }
+
+
+/* About  */
+
+.about {
+    display: grid;
+    align-items: center;
+    grid-template-columns: repeat(auto-fit,minmax(17rem, auto));
+    gap: 1.5rem;
+}
+
+.about-text h2 {
+    font-size: 1.8rem;
+    text-transform: uppercase;
+}
+
+.about-text p {
+    font-size: 0.938rem;
+    margin: 0.5rem 0 1rem;
 }
