--- a/style.css
+++ b/style.css
@@ -240,3 +240,76 @@ background: #ff8664;
     font-size: 0.938rem;
     margin: 0.5rem 0 1rem;
 }
+
+.heading {
+    text-align: center;
+}
+
+.heading h2 {
+    font-size: 1.8rem;
+    text-transform: uppercase;
+}
+
+.products-container {
+    display: grid;
+    align-items: center;
+    grid-template-columns: repeat(auto-fit,minmax(280px, auto));
+    gap: 1.5rem;
+}
+
+.products-container .box {
+    display: flex;
+    position: relative;
+    padding: 10px;
+    flex-direction: column;
+    justify-content: center;
+    border-radius: 0.5rem;
+    box-shadow: var(--box-shadow);
+}
+
+.products-container .box img {
+    width: 100%;
+    height: 200px;
+    object-fit: contain;
+    object-position: center;
+    padding: 20px;
+    background: var(--second-color);
+    border-radius: 0.5rem;
+}
+
+.products-container .box:hover img {
+    -webkit-transform: scaleX(-1);
+    -moz-transform: scaleX(-1);
+    -o-transform: scaleX(-1);
+    transform: scaleX(-1);
+    transition: 0.4s all linear;
+}
+
+.products-container .box h3 {
+    font-size: 1rem;
+    font-weight: 600;
+    text-transform: uppercase;
+    margin: 0.5rem 0 0.5rem;
+}
+
+.products-container .box span{
+    font-size: 1rem;
+    font-weight: 600;
+    color: var(--main-color);
+}
+
+.products-container .box .bx {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    padding: 10px;
+    font-size: 20px;
+    background: var(--main-color);
+    color: var(--bg-color);
+    border-radius: 0.5rem 0 0.5rem 0;
+    cursor: pointer;
+}
+
+.products-container .box .bx:hover {
+    background: #ff8664;
+}
