--- a/style.css
+++ b/style.css
@@ -355,3 +355,42 @@ header {
     background: var(--second-color);
     transition: 0.2s all linear;
 }
+
+.newsletter {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    row-gap: 2rem;
+}
+
+.newsletter h2 {
+    font-size: 1.8rem;
+    text-transform: uppercase;
+}
+
+.newsletter form {
+    background: var(--bg-color);
+    border: 0.5rem;
+    box-shadow: var(--box-shadow);
+}
+
+.newsletter form input {
+    width: 200px;
+    border: none;
+    outline: none;
+    background: transparent;
+}
+
+.newsletter form .email-btn {
+  background-color: var(--main-color);
+  color: var(--bg-color);
+  padding: 8px 14px;
+  text-transform: uppercase;
+  font-size: 1rem;
+  font-weight: 500;
+  max-width: 115px;
+  border-radius: 0.5rem;
+  cursor: pointer;
+}
