--- a/style.css
+++ b/style.css
@@ -50,6 +50,12 @@ header {
   justify-content: space-between;
   z-index: 1000;
   padding: 18px 100px;
+  transition: 0.5s;
+}
+
+header.active {
+  box-shadow: var(--box-shadow);
+  
 }
 
 .logo {
@@ -248,6 +254,7 @@ header {
 .heading h2 {
   font-size: 1.8rem;
   text-transform: uppercase;
+  padding-bottom: 2rem;
 }
 
 .products-container {
@@ -372,7 +379,8 @@ header {
 
 .newsletter form {
     background: var(--bg-color);
-    border: 0.5rem;
+    padding: 10px;
+    border-radius: 0.5rem;
     box-shadow: var(--box-shadow);
 }
 
@@ -393,4 +401,176 @@ header {
   max-width: 115px;
   border-radius: 0.5rem;
   cursor: pointer;
+}
+
+.footer {
+  display: grid;
+  align-items: center;
+  grid-template-columns: repeat(auto-fit, minmax(240px, auto));
+  gap: 1.5rem;
+}
+
+.footer-box a {
+  margin-bottom: 10px;
+  font-size: 1rem;
+  color: var(--text-color);
+}
+
+.footer-box a:hover {
+  color: var(--main-color);
+}
+
+.footer-box p {
+  font-size: 0.938rem;
+  margin-bottom: 10px;
+}
+
+.socials {
+  display: flex;
+  align-items: center;
+  column-gap: 0.5rem;
+}
+
+.socials a .bx {
+  font-size: 24px;
+  color: var(--text-color);
+  padding: 10px;
+  background: var(--second-color);
+  border-radius: 5rem;
+}
+
+.socials a .bx:hover {
+  background: var(--main-color);
+  color: var(--bg-color);
+}
+
+.footer-box h3 {
+  font-weight: 600;
+  margin-bottom: 10px;
+}
+
+.contact {
+  display: flex;
+  flex-direction: column;
+  row-gap: 0.5rem;
+}
+
+.contact span {
+  display: flex;
+  align-items: center;
+}
+
+.contact i {
+  font-size: 20px;
+  margin-right: 1rem;
+}
+
+.copyright {
+  padding: 20px;
+  text-align: center;
+  background: var(--second-color);
+}
+
+
+/* --------------- */
+/* Media Query */
+
+@media (max-width: 1058) {
+  header {
+    padding: 15px 60px;
+  }
+
+  .section {
+    padding: 50px 60px;
+  }
+
+  .home-text h1{
+    font-size: 2.4rem;
+  }
+
+  section {
+    padding: 50px 4px;
+  }
+
+  .products-container {
+    grid-template-columns: repeat(auto-fit, minmax(240px, auto));
+  }
+}
+
+
+@media (max-width: 768px) {
+ header {
+  padding: 12px 4%;
+ }
+
+ #menu-icon {
+  display: initial;
+ }
+
+ .navbar {
+  position: absolute ;
+  top: 100%;
+  left: 0;
+  right: 0;
+  display: flex;
+  flex-direction: column;
+  background: var(--bg-color);
+  row-gap: 1.4rem;
+  padding: 20px;
+  transition: 0.4s all linear;
+  text-align: center;
+  box-shadow: var(--box-shadow);
+  clip-path: circle(0% at 100% 1%);
+ }
+
+ .navbar.active {
+  clip-path: circle(144% at 100% 1%);
+ }
+}
+
+
+@media (max-width: 614px) {
+  .home-text {
+    padding: 15px;
+  }
+
+  .home-text h1 {
+    font-size: 2rem;
+  }
+
+  .about {
+    text-align: center;
+  }
+
+  .about-img {
+    order: 2;
+  }
+}
+
+@media (max-width: 320px)  {
+header {
+  padding: 11px 4%;
+}
+
+.section {
+  align-items: center;
+}
+
+.header-icon .bx  {
+  padding: 4px;
+}
+
+.home-text {
+  font-size: 1.8rem;
+}
+
+.about-text h2, 
+.heading h2,
+.newsletter h2 {
+  font-size: 1.2rem;
+}
+
+.newsletter form input {
+  width: auto;
+}
 }
