--- a/style.css
+++ b/style.css
@@ -547,21 +547,80 @@ header.active {
   }
 }
 
-@media (max-width: 320px)  {
+@media (max-width: 425px)  {
 header {
   padding: 11px 4%;
 }
 
-.section {
-  align-items: center;
+section {
+ padding: 80px 30px;
+ 
+
 }
 
 .header-icon .bx  {
   padding: 4px;
 }
 
+.home {
+  text-align: center;
+  align-items: center;
+ justify-content: center;
+}
+
+.home-text h1 {
+  font-size: 2rem;
+}
+
+.home-text p{
+  text-align: center;
+  margin: 1.5rem auto;
+  width: 400px;
+}
+
+.btn {
+  padding: 6px 25px;
+  font-size: 1.2rem;
+}
+
 .home-text {
-  font-size: 1.8rem;
+  font-size: 1.4rem;
+}
+
+.about {
+  padding-bottom: 5px;
+}
+
+/* .products {
+  padding-top: 15px;
+} */
+
+.about-text p{
+  text-align: center;
+  padding-left: -20px;
+  padding-right: 20px;
+}
+
+.about-img {
+  align-items: center;
+  margin-right: 10px;
+  margin-left: -10px;
+  margin-bottom: 0;
+}
+
+.about-text h2{
+  text-align: center;
+  padding-left: -20px;
+  padding-right: 20px;
+}
+
+.about-text .btn{
+  margin-left: -20px;
+  margin-right: 20px;
+}
+
+.products-container {
+  padding-top: 0;
 }
 
 .about-text h2, 
@@ -573,4 +632,27 @@ header {
 .newsletter form input {
   width: auto;
 }
+
+.products-container .box {
+  align-items: center;
+  justify-content: center;
+  margin-right: 5px;
+  margin-left: -10px;
+}
+
+.products-container .box .bx  {
+  padding: 7px;
+  font-size: 16px;
+}
+/* .customers {
+  padding-top: 15px;
+} */
+.customers-container {
+  align-items: center;
+  justify-content: center;
+  margin-right: 15px;
+  margin-left: 10px;
+}
+
+
 }
